syntax = "proto3";

package appointment;

message PaymentTransaction {
    string id = 1; 
    string BusinessNodeId = 2;
    string CustomerId = 3;
    float TotalAmount = 4;
    string ExternalId = 5;
    string Currency = 6;
    string Status = 7;
    bool IsComplete = 8;
    string InitiatedOn = 9;
    string CompletedOn = 10;
    bool IsActive = 11;
  }

message PaymentTransactionCreateModel {
  string BusinessNodeId = 1;
  string CustomerId = 2;
  float TotalAmount = 3;
  string ExternalId = 4;
  string Currency = 5;
  string Status = 6;
  bool IsComplete = 7;
  string InitiatedOn = 8;
  string CompletedOn = 9;
  bool IsActive = 10;
}

message PaymentTransactionGetByIdModel {
    string id = 1; 
}

message PaymentTransactionGetByIdResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  float TotalAmount = 4;
  string ExternalId = 5;
  string Currency = 6;
  string Status = 7;
  bool IsComplete = 8;
  string InitiatedOn = 9;
  string CompletedOn = 10;
  bool IsActive = 11;
}

message PaymentTransactionCreateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  float TotalAmount = 4;
  string ExternalId = 5;
  string Currency = 6;
  string Status = 7;
  bool IsComplete = 8;
  string InitiatedOn = 9;
  string CompletedOn = 10;
  bool IsActive = 11;
}

message PaymentTransactionUpdateModel {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  float TotalAmount = 4;
  string ExternalId = 5;
  string Currency = 6;
  string Status = 7;
  bool IsComplete = 8;
  string InitiatedOn = 9;
  string CompletedOn = 10;
  bool IsActive = 11;
}

message PaymentTransactionUpdateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  float TotalAmount = 4;
  string ExternalId = 5;
  string Currency = 6;
  string Status = 7;
  bool IsComplete = 8;
  string InitiatedOn = 9;
  string CompletedOn = 10;
  bool IsActive = 11;
}

message PaymentTransactionSearchModel {
    string businessNodeId = 1;
    string customerId = 2;
    string appointmentId = 3;
    bool isActive = 4;
}

message PaymentTransactionSearchResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  float TotalAmount = 4;
  string ExternalId = 5;
  string Currency = 6;
  string Status = 7;
  bool IsComplete = 8;
  string InitiatedOn = 9;
  string CompletedOn = 10;
  bool IsActive = 11;
}

message PaymentTransactionDeleteModel {
    string id = 1;
}

  message PaymentTransactionDeleteResponse {
    string id = 1;
}

service PaymentTransactions {
    rpc Create(PaymentTransactionCreateModel) returns (PaymentTransactionCreateResponse);
    rpc GetById(PaymentTransactionGetByIdModel) returns (PaymentTransactionGetByIdResponse) {};
    rpc Search(PaymentTransactionSearchModel) returns (PaymentTransactionSearchResponse) {};
    rpc Update(PaymentTransactionUpdateModel) returns (PaymentTransactionUpdateResponse) {};
    rpc Delete(PaymentTransactionDeleteModel) returns (PaymentTransactionDeleteResponse) {};

}